# Guitar-Trainer

./: .gitignore  README.md  pyproject.toml  stats.json  stats_6.json  stats_6__drop_d.json  stats_6__e_standard.json  stats_7.json  stats_7__b_standard.json
.github/workflows/: release.yml  tests.yml
scripts/: run_gui.py
src/guitar_trainer/: app.py  cli.py
src/guitar_trainer/core/: adaptive.py  mapping.py  notes.py  position_key.py  quiz.py  settings.py  stats.py  training_plan.py  tuning.py
src/guitar_trainer/gui/: app_tk.py  dpi.py  fretboard.py  fretboard_math.py  heatmap_picker_tk.py  menu_tk.py  practice_summary_tk.py  practice_tk.py  quiz_tk.py  stats_view_tk.py  theme.py
tests/: test_adaptive.py  test_cli.py  test_custom_tuning_parse.py  test_fretboard_math.py  test_mapping.py  test_note_parsing.py  test_notes.py  test_quiz.py  test_smoke.py  test_stats.py  test_tuning_7string.py
