[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guitar-trainer"
version = "0.1.0"
description = "A Python guitar fretboard trainer (CLI + Tkinter GUI)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
guitar-trainer = "guitar_trainer.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
